fix: css mobile layout

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ footer {
     justify-content: space-evenly;
     font-weight: bold;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
 }
 footer a {
     color: #ffffff;
@@ -57,13 +57,34 @@ h1 {
     .container {
       width: 100%;
     }
-    .photo {
+    div.photo {
         width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     div.name {
         width: 100%;
     }
-  }
+    .container-profile {
+        flex-direction: column;
+    }
+    img.main-photo {
+        margin: 15px auto;
+        float: none;
+    }
+    .navbar {
+        height: 100px;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+    }
+    h1 {
+        display: flex;
+        align-items: center;
+        justify-content: center
+    }
+}
   .navbar {
     display: flex;
     justify-content: flex-end;
@@ -85,6 +106,7 @@ h1 {
   }
   .main {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     width: 75%;
     margin: 0 auto;
@@ -124,7 +146,8 @@ h1 {
   .box {
       display: flex;
       flex-wrap: wrap;
-      margin: 0 -10px;
+      max-width: 1440px;
+      margin: 0 auto;
   }
   .container-text {
       margin-left: 20px;
